--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -1,17 +1,56 @@
 ---
-title: "3M Internship"
-date: "2019-07-01"
-desc: "description"
+title: "3M Internship" 
+date: "JUNE, 2019 (2 MONTHS)"
+desc: ""
 square: ./3M/square.jpg
 order: 1
 ---
+
 <style>
-    .scroll{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 85%;
-    }
+
+ .intro-img {
+    float:right;
+    width:20%;
+    margin-left:250px;
+    padding-right:19%;
+}
+
+.intro{
+    font-family: 'IBM Plex Sans', sans-serif;
+    line-height: 2;
+ }
+
+ .img2{
+    padding-right:40%;
+    padding-top:10%;
+ }
+
+
 </style>
-<img src="./3M/3Mwebsitebigfont.png" class="scroll">
-<img src="./3M/3Mwebsite2.png" class="scroll">
+
+<!-- <div class = "addtext">
+    <p>Please contact me if you would like to hear more about my experience!</p>
+</div> -->
+
+<!-- <div class = "intro-img">
+    <img src = "./3M/3MImage.png">
+</div> -->
+
+<div class = "intro"  >
+    <p> 
+        <div class="intro-img"> 
+            <img src="./3M/3MImage.png"  > 
+        </div class = "info"> 
+       During the summer of 2019, I served as a design intern at 3M Japan, where I researched and explored several of the company's advanced materials, including DI-NOC films. Exploring the relationship between textures and patterns, I helped create new implementations of their materials.
+       <br/>
+       <br/>
+       Send me a message if you would like to hear more about my experience!
+    </p>
+
+    
+</div>
+
+
+
+
+
