need to add about me

--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -41,7 +41,7 @@ order: 1
         <div class="intro-img"> 
             <img src="./3M/3MImage.png"  > 
         </div class = "info"> 
-       During the summer of 2019, I served as a design intern at 3M Japan, where I researched and explored several of the company's advanced materials, including DI-NOC films. Exploring the relationship between textures and patterns, I helped create new implementations of their materials.
+       During the summer of 2019, I served as a design intern at 3M Japan, where I researched and explored several of the company's advanced materials including DI-NOC films. Exploring the relationship between textures and patterns, I helped create new implementations and designs of their materials.
        <br/>
        <br/>
        Send me a message if you would like to hear more about my experience!
