--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -3,7 +3,8 @@ title: "3M Internship"
 date: "JUNE, 2019 (2 MONTHS)"
 desc: ""
 square: ./3M/square.jpg
-order: 1
+order: 2
+worktype: "notux"
 ---
 
 <style>
