--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -3,7 +3,7 @@ title: "3M Internship"
 date: "JUNE, 2019 (2 MONTHS)"
 desc: ""
 square: ./3M/Cover.png
-order: 2
+order: 3
 worktype: "notux"
 content: "index"
 useTemplate: true
@@ -20,7 +20,7 @@ useTemplate: true
 }
 
 .intro{
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: europa, sans-serif;
     line-height: 2;
  }
 
