--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -2,7 +2,7 @@
 title: "3M Internship" 
 date: "JUNE, 2019 (2 MONTHS)"
 desc: ""
-square: ./3M/Cover.png
+square: ./3M/cover.jpg
 order: 5
 worktype: "notux"
 content: "index"
