--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -6,7 +6,7 @@ square: ./3M/cover.jpg
 order: 5
 worktype: "notux"
 content: "index"
-useTemplate: true
+useTemplate: false
 tag: "Internship"
 ---
 
