middle ground added and some style changes

--- a/src/pages/3M.md
+++ b/src/pages/3M.md
@@ -5,7 +5,7 @@ desc: ""
 square: ./3M/cover.jpg
 order: 5
 worktype: "notux"
-content: "index"
+content: "notIndex"
 useTemplate: false
 tag: "Internship"
 ---
